Books added Books borrowing added

--- a/public/login.html
+++ b/public/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 
-<html ng-app="megabyte.night-life">
+<html ng-app="megabyte.books-club">
 
 	<head>
-		<title>Night-life</title>
-		<link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+		<title>Books-trading-club</title>
+		<link href='https://fonts.googleapis.com/css?family=Overlock:700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 		<link href="/public/css/main.css" rel="stylesheet" type="text/css">
 		<meta name="google-signin-client_id" content="933940321357-nk2uvvdsirhvb45b20t37agtkekftre4.apps.googleusercontent.com">
@@ -28,13 +28,13 @@
 					</div>
 					<div class="div-inline">
 						<a href="/auth/google">
-								<img src="/public/img/google_32px.png" alt="github logo" />
+								<img src="/public/img/google_32px.png" alt="google logo" />
 								<p>LOGIN WITH GOOGLE</p>
 						</a>
 					</div>
 					<div class="div-inline">
 						<a href="/auth/twitter">
-								<img src="/public/img/twitter_32px.png" alt="github logo" />
+								<img src="/public/img/twitter_32px.png" alt="twitter logo" />
 								<p>LOGIN WITH TWITTER</p>
 						</a>
 					</div>
@@ -44,7 +44,7 @@
 		</div>
 		
 		<div class="footer flext-center-center">
-			<a href="http://codepen.io/Megabyteceer/full/xwzMej/">Vasiliy Kostin</a>, fullstack, nodejs, angular, <a href="http://www.yelp.com/" target="_blank"> yelp API <img src="public/img/yelp_logo_small.png"></a>
+			<a href="http://codepen.io/Megabyteceer/full/xwzMej/">Vasiliy Kostin</a>, fullstack, nodejs, angular, google-books-API
 		</div>
 
 		
